# mvpmm

./: install.sh
briefly/: .env.example  .gitignore  LICENSE  README.md  branding_detector.py  example-custom-brand.json  extractor.py  main.py  pdf_generator.py  pyproject.toml  requirements.txt  run.py  scraper.py  setup.sh
briefly/demo/: vela-brand.json  vela-messaging.txt
briefly/static/: app.js  index.html
briefly/static/css/: styles.css
webWhys/: .env.example  .gitignore  LICENSE  README.md  analyzer.py  best_practices.py  browser_manager.py  document_processor.py  main.py  metric_explanations.py  requirements.txt  run.py  scraper.py
webWhys/.claude/: launch.json
webWhys/static/: index.html
webWhys/static/css/: styles.css
webWhys/static/images/: README.md
webWhys/static/js/: app.js
